Lecture 01 fix SwitchPatterns bug